# PersonalNotebook

./: .env.example  .gitignore  README.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_phase16.py  003_pairing_tokens.py  004_phase3b.py  phase_1_5_add_fields.py
backend/app/: main.py
backend/app/api/: auth_routes.py  chat_routes.py  document_routes.py  eval_routes.py  job_routes.py  kb_routes.py  pair_routes.py  system_routes.py
backend/app/core/: config.py
backend/app/db/: alembic_env.py  session.py
backend/app/dependencies/: auth.py
backend/app/models/: base.py  models.py
backend/app/schemas/: schemas.py
backend/app/services/: document_state.py  embedding.py  qdrant_store.py  storage.py
backend/app/services/chunking/: chunker.py
backend/app/services/claims/: evidence_pack.py
backend/app/services/connectors/: base.py
backend/app/services/consistency/: checker.py
backend/app/services/generation/: generator.py
backend/app/services/parsers/: __init__.py  archive_parser.py  audio_parser.py  base.py  code_parser.py  docx_parser.py  fallback_parser.py  image_parser.py  latex_parser.py  markdown_parser.py  pdf_parser.py  pptx_parser.py  txt_parser.py  video_parser.py  xlsx_parser.py
backend/app/services/rerank/: reranker.py
backend/app/services/retrieval/: retriever.py
backend/app/workers/: celery_app.py
backend/tests/: test_basic.py  test_chat_refusal.py  test_chunking.py  test_citation.py  test_e2e_mvp.py  test_evaluation.py  test_mvp_closed_loop.py  test_pairing.py  test_parsers.py
backend/tests/fixtures/rag_eval/: cases.json  personal_kb_test.md
docs/: APP_TROUBLESHOOTING.md  BETA_TEST_PLAN.md  PHASE_2C_RELEASE.md  PHASE_2E_TEST_REPORT.md  SECURITY_PRIVACY.md  USER_FEEDBACK_TEMPLATE.md  api.md  architecture.md  deployment.md  evaluation.md  model.md  multimodal_ingestion.md  rag_pipeline.md
frontend/: next.config.js  package.json  tailwind.config.ts
infra/: docker-compose.yml
model-gateway/: main.py  pyproject.toml
model-gateway/providers/: dashscope.py  ollama.py  openai_compatible.py  vllm.py
model-gateway/schemas/: __init__.py
release/: README.md
scripts/: _validate_worker.py  app_build_check.sh  app_build_verify.sh  app_device_smoke_test.sh  app_e2e_check.sh  app_release_prepare.sh  build_macos.sh  build_mobile.sh  build_windows.ps1  ci_check.sh  eval_rag.py  (+19 more)
(+90 files in other folders)
