[project]
name = "personal-kb-backend"
version = "0.1.0"
description = "Personal-KB 后端 API 服务"
requires-python = ">=3.11"
readme = "../README.md"
license = { text = "MIT" }

dependencies = [
    # Web 框架
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",

    # 数据库
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.14.0",

    # 数据验证
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # 异步任务
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",

    # 对象存储
    "minio>=7.2.10",

    # 向量数据库
    "qdrant-client>=1.12.0",

    # 文档解析
    "PyMuPDF>=1.25.0",
    "python-docx>=1.1.2",
    "python-pptx>=1.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.0",
    "markdown-it-py>=3.0.0",
    "python-frontmatter>=1.1.0",

    # OCR / 图像
    "Pillow>=11.0.0",

    # 音频/视频
    "faster-whisper>=1.0.0",

    # HTTP 客户端
    "httpx>=0.28.0",
    "aiofiles>=24.1.0",

    # 安全
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # 工具
    "python-dotenv>=1.0.1",
    "loguru>=0.7.3",
    "tiktoken>=0.8.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

all = [
    "paddleocr>=2.9.0",
    "paddlepaddle>=3.0.0",
    "opencv-python>=4.10.0",
    "elasticsearch>=8.16.0",
    "duckdb>=1.2.0",
    "tree-sitter>=0.23.0",
    "latex2mathml>=3.77.0",
    "pypdf2>=3.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
